# mirror-recorder

./: README.md  pyproject.toml
mirror_recorder/: __init__.py  mirror.py
mirror_recorder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_mirror_recorder.py
