[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirror-recorder"
version = "0.1.0"
description = "Record I2I sessions as LoRA training data — two viewscreens, every exchange = training"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Oracle1", email = "oracle1@cocapn.ai"}]
keywords = ["mirror", "recorder", "i2i", "lora", "training-data", "cocapn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/SuperInstance/mirror-recorder"
